--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
   "devDependencies": {
     "@types/fs-extra": "^8.1.0",
     "@types/jest": "^25.2.1",
+    "eslint-plugin-prettier": "^3.1.3",
     "fs-extra": "^9.0.0",
     "husky": "^4.2.5",
     "np": "^6.2.2",
+    "prettier": "^2.0.5",
     "tsdx": "^0.13.2",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
