--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "tsdx lint",
     "pub": "yarn build && np",
     "start": "tsdx watch",
-    "test": "tsdx test",
+    "test": "tsdx test --coverage",
     "test:watch": "tsdx test --watch"
   },
   "husky": {
@@ -45,15 +45,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/fs-extra": "^8.1.0",
-    "@types/jest": "^25.2.1",
-    "eslint-plugin-prettier": "^3.1.3",
-    "fs-extra": "^9.0.0",
+    "@types/fs-extra": "^9.0.1",
+    "@types/jest": "^26.0.8",
+    "eslint-plugin-prettier": "^3.1.4",
+    "fs-extra": "^9.0.1",
     "husky": "^4.2.5",
-    "np": "^6.2.3",
+    "np": "^6.3.2",
     "prettier": "^2.0.5",
     "tsdx": "^0.13.2",
-    "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.7"
   }
 }
