--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-  "tabWidth": 2,
-  "useTabs": false,
-  "arrowParens": "avoid",
-  "printWidth": 120
+  "printWidth": 80,
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5"
 }
