--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docsy",
-  "version": "0.10.0",
+  "version": "1.0.0-0",
   "description": "A syntax for Component based documents",
   "keywords": [],
   "homepage": "https://github.com/etienne-dldc/docsy#readme",
