--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsc -p ./tsconfig.build.json",
-    "lint": "prettier --check . && eslint && tsc --noEmit",
-    "lint:fix": "prettier --write . && eslint --fix",
+    "lint": "prettier . --check && eslint . && tsc --noEmit",
+    "lint:fix": "prettier . --write . && eslint . --fix",
     "release": "yarn build && np",
     "test": "yarn lint && jest --coverage",
     "test:run": "jest",
