--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "release": "yarn build && np",
     "test": "yarn lint && jest --coverage",
     "test:run": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "example:run": "vite serve example"
   },
   "dependencies": {
     "tslib": "^2.3.0"
@@ -46,7 +47,8 @@
     "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "vite": "^2.4.4"
   },
   "publishConfig": {
     "access": "public",
