--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsc -p ./tsconfig.build.json",
+    "build:watch": "tsc -p ./tsconfig.build.json --watch",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
     "release": "yarn build && np",
