--- a/package.json
+++ b/package.json
@@ -16,48 +16,48 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "import": "./dist/docsy.es.js",
-      "require": "./dist/docsy.cjs.js"
+      "import": "./dist/mod.mjs",
+      "require": "./dist/mod.js"
     }
   },
-  "main": "./dist/docsy.cjs.js",
-  "module": "./dist/docsy.es.js",
+  "main": "./dist/mod.js",
+  "module": "./dist/mod.mjs",
   "types": "./dist/mod.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rimraf dist && vite build && yarn build:types && denoify",
-    "build:types": "tsc -p ./tsconfig.build.json",
-    "example:run": "vite serve example",
-    "lint": "prettier . --check && eslint . && tsc --noEmit",
-    "lint:fix": "prettier . --write . && eslint . --fix",
-    "release": "yarn build && np",
-    "test": "yarn lint && jest --coverage",
+    "build": "rimraf dist && tsup src/mod.ts --format esm,cjs --dts && denoify",
+    "dev": "tsup src/mod.ts --format esm,cjs --watch",
+    "lint": "prettier src --check && eslint src && tsc --noEmit",
+    "lint:fix": "prettier src --write && eslint src --fix",
+    "release": "yarn run build && np",
+    "test": "yarn run lint && jest --coverage",
+    "test:cov:watch": "jest --coverage --watch --all",
     "test:run": "jest",
     "test:watch": "jest --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "typecheck:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
     "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "denoify": "^0.10.5",
-    "eslint": "^8.2.0",
+    "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "denoify": "^0.11.0",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "fs-extra": "^10.0.0",
-    "jest": "^27.3.1",
-    "jest-ts-tsx-resolver": "^1.0.0",
-    "np": "^7.5.0",
-    "prettier": "^2.4.1",
+    "jest": "^27.5.1",
+    "np": "^7.6.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.13"
+    "ts-jest": "^27.1.3",
+    "tsup": "^5.11.13",
+    "typescript": "^4.5.5"
   },
   "publishConfig": {
     "access": "public",
