--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
+  "tabWidth": 2,
+  "useTabs": false,
   "printWidth": 120,
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "es5"
+  "singleQuote": true
 }
