--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts",
-    "build:deno": "rimraf deno && denoify --out deno",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
     "release": "release-it",
@@ -44,11 +43,10 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
-    "@types/node": "^20.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "@vitest/coverage-v8": "^0.32.0",
-    "denoify": "^1.5.8",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "fs-extra": "^11.1.1",
@@ -67,10 +65,7 @@
   },
   "release-it": {
     "hooks": {
-      "before:init": [
-        "pnpm test",
-        "pnpm run build:deno"
-      ]
+      "before:init": "pnpm test"
     },
     "npm": {
       "publish": true
