--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dldc/docsy",
-  "version": "1.0.0-35",
+  "version": "1.0.0",
   "description": "A syntax for Component based documents",
   "keywords": [],
   "homepage": "https://github.com/dldc-packages/docsy#readme",
