--- a/package.json
+++ b/package.json
@@ -40,14 +40,60 @@
     "typecheck": "tsc",
     "typecheck:watch": "tsc --watch"
   },
+  "dldc": {
+    "additionalDevDependencies": [
+      "@types/fs-extra",
+      "fs-extra"
+    ]
+  },
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "useTabs": false
+  },
+  "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": true,
+      "warnOnUnsupportedTypeScriptVersion": false
+    },
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "extends": [
+      "plugin:@typescript-eslint/recommended-type-checked",
+      "prettier"
+    ],
+    "rules": {
+      "no-constant-condition": "off",
+      "@typescript-eslint/ban-types": "off",
+      "@typescript-eslint/consistent-type-imports": "error",
+      "@typescript-eslint/no-base-to-string": "off",
+      "@typescript-eslint/no-empty-function": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/no-inferrable-types": "off",
+      "@typescript-eslint/no-non-null-assertion": "off",
+      "@typescript-eslint/no-redundant-type-constituents": "off",
+      "@typescript-eslint/no-this-alias": "off",
+      "@typescript-eslint/no-unsafe-argument": "off",
+      "@typescript-eslint/no-unsafe-assignment": "off",
+      "@typescript-eslint/no-unsafe-call": "off",
+      "@typescript-eslint/no-unsafe-member-access": "off",
+      "@typescript-eslint/no-unsafe-return": "off",
+      "@typescript-eslint/no-unused-vars": "off",
+      "@typescript-eslint/unbound-method": "off"
+    },
+    "root": true
+  },
   "dependencies": {
     "@dldc/erreur": "^4.0.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.2",
-    "@types/node": "^20.6.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
+    "@types/node": "^20.7.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "@vitest/coverage-v8": "^0.34.5",
     "auto-changelog": "^2.4.0",
     "eslint": "^8.50.0",
