--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@dldc/docsy",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "exports": "./mod.ts",
   "imports": {
     "@dldc/erreur": "jsr:@dldc/erreur@^7.1.1",
@@ -15,7 +15,13 @@
     "check": "deno fmt --check . && deno lint . && deno task test:run"
   },
   "lint": {
-    "rules": { "exclude": ["no-explicit-any"] }
+    "rules": {
+      "exclude": [
+        "no-explicit-any"
+      ]
+    }
   },
-  "exclude": ["tests/data"]
+  "exclude": [
+    "tests/data"
+  ]
 }
